nav bar stuff, gradient stuff, animation stuff, stuff stuff

--- a/styles/sass/components/_component.button.scss
+++ b/styles/sass/components/_component.button.scss
@@ -23,3 +23,7 @@ $btn-border--hover  : $btn-color--default;
         border-color: $btn-border--hover;
     }
 }
+
+    .c-btn--fullWidth {
+        width: 100%;
+    }
