--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -15,12 +15,12 @@
 @import './components/_component.navbar';
 @import './components/_component.button';
 @import './components/_component.input';
-@import './components/_component.map';
 @import './components/_component.container';
 
 /* Application Components
 -----------------------------*/
 @import './app_components/_app.search-container';
+@import './app_components/_app.places-map';
 
 html, body {
     height: 100%;
@@ -31,15 +31,14 @@ html, body {
 body {
     color: $text-color--default;
     background: linear-gradient(-145deg,
+                                palette(gray, dark),
                                 palette(navy, dark),
                                 palette(navy),
-                                palette(navy, light),
-                                palette(mint, dark),
-                                palette(mint),
-                                palette(mint, light),
                                 palette(lavender, dark),
                                 palette(lavender),
-                                palette(lavender, light));
+                                palette(mint, dark),
+                                palette(mint),
+                                palette(mint, light));
     background-size: 800% 800%;
     -webkit-animation: backgroundGradient 30s ease infinite;
     -moz-animation: backgroundGradient 30s ease infinite;
