--- a/styles/sass/settings/_setting.global.scss
+++ b/styles/sass/settings/_setting.global.scss
@@ -14,6 +14,10 @@ $palette-key: 'base' !default;
 }
 
 $color-palette : (
+    white : (
+        base    : #fff
+    ),
+
     gray : (
         dark    : #1A1A1B,
         base    : #333F44,
