changed mind about color of button and border for app-search components...went for mint instead

--- a/styles/sass/app_components/_app.search-container.scss
+++ b/styles/sass/app_components/_app.search-container.scss
@@ -1,4 +1,4 @@
-$searchForm-border--default: palette(lavender, dark);
+$searchForm-border--default: palette(mint, dark);
 $searchForm-btn-color--default: palette(white);
 $searchForm-btn-colorBg--default: $searchForm-border--default;
 
