un-oopsed a thing

--- a/styles/sass/utilities/_utility.color.scss
+++ b/styles/sass/utilities/_utility.color.scss
@@ -10,7 +10,7 @@
             color: $tone;
         }
         .u-bgColor--#{$text-color}-#{$variant} {
-            color: $tone;
+            background-color: $tone;
         }
     }
 }
